[package]
name = "common"
version = "0.1.0"
authors = ["Danijel Radulović <master.daca09@gmail.com>"]
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/sora-xor/sora2-network'
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', default-features = false }
frame-system = { version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', default-features = false }
serde = { version = "1.0.101", features = ["derive"], optional = true, default-features = false }
sp-core = { version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', default-features = false }
sp-runtime = { version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', default-features = false }
sp-std = { version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'serde',
    'frame-support/std',
    'frame-system/std',
    'sp-core/std',
    'sp-runtime/std',
    'sp-std/std',
]
test = []
