[package]
authors = ['Danijel Radulović <master.daca09@gmail.com>']
description = 'Pallet for providing DeFi services'
edition = '2018'
license = 'MIT'
name = 'pallet-defi'
readme = 'README.md'
repository = 'https://github.com/MasterRadule/substrate-defi-blockchain'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
tag = 'monthly-2021-07'
version = '3.1.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-defi-rpc-runtime-api]
version = "1.0.0"
path = "runtime-api"

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'codec/std'
]
try-runtime = ['frame-support/try-runtime']
