[package]
authors = ['Danijel Radulović <master.daca09@gmail.com>']
description = 'Pallet for providing DeFi services'
edition = '2018'
license = 'MIT'
name = 'pallet-defi'
readme = 'README.md'
repository = 'https://github.com/MasterRadule/substrate-defi-blockchain'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
tag = 'monthly-2021-07'
version = '3.1.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.serde]
version = "1.0.101"
optional = true
features = ["derive"]

[dependencies.sp-std]
default-features = false
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-07'

[dependencies.sp-io]
default-features = false
version = '3.0.0'
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-07'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.hex-literal]
version = '0.3.1'

[dependencies.pallet-defi-rpc-runtime-api]
default-features = false
path = "runtime-api"

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'codec/std',
    'serde',
    'sp-runtime/std',
    'sp-std/std',
    'sp-core/std',
    'pallet-balances/std',
]
try-runtime = ['frame-support/try-runtime']
