[package]
name = "pallet-defi-rpc"
version = "1.0.0"
edition = "2018"
authors = ['Danijel Radulović <master.daca09@gmail.com>']
repository = 'https://github.com/MasterRadule/substrate-defi-blockchain'
description = "A pallet that demonstrates RPC calls for DeFi services"
license = "GPL-3.0-or-later"

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0" }
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "15.0.0"
jsonrpc-derive = "15.0.0"

# Substrate packages

sp-api = { version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
sp-blockchain = { version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
sp-rpc = { version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
sp-runtime = { version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
sp-std = { version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
sp-core = { version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }

# local packages

pallet-defi-rpc-runtime-api = { path = "../runtime-api" }
